--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,13 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<title>About Katherine</title>
+</head>
+<body>
+
+<h1>About Katherine</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
