--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>About Katherine</h1>
-<p>Hi my names katherine and i like watching cartoons</p>
+<p>Hi my names katherine and i like watching cartoonss</p>
 
 </body>
 </html>
