--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,6 @@
 
 <h1>About Katherine</h1>
 <p>Hi my names katherine and I like watching cartoons and being lazy</p>
-
+<p>coding is pretty neat<p>
 </body>
 </html>
