--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,7 @@
 
 <h1>About Katherine</h1>
 <p>Hi my names katherine and I like watching cartoons and being lazy</p>
-<p>coding is pretty neat<p>
+<p>coding is pretty neat</p>
+  <p> i keep on forgetting the syntax </p>
 </body>
 </html>
