--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>About Katherine</h1>
+<h1 color= "orange">About Katherine</h1>
 <p>Hi my names katherine and I like watching cartoons and being lazy</p>
 <p>coding is pretty neat</p>
   <p> i keep on forgetting the syntax </p>
