--- a/aboutme.html
+++ b/aboutme.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<h1 style="color:red"</h1>
-<p>Hi my names katherine and I like watching cartoons and being lazy</p>
+<h1>About Katherine</h1>
+<p>Hi my names katherine and I like watching cartoonss and being lazy</p>
 <p>coding is pretty neat</p>
   <p> i keep on forgetting the syntax </p>
 </body>
