--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>About Katherine</h1>
-<p>Hi my names katherine and I like watching cartoonss and being lazy</p>
+<p>Hi my names katherinee and I like watching cartoonss and being lazy</p>
 <p>coding is pretty neat</p>
   <p> i keep on forgetting the syntax </p>
 </body>
