--- a/aboutme.html
+++ b/aboutme.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-<h1>About Katherine</h1>
-<p>Hi my names katherinee and I like watching cartoonss and being lazy</p>
+<h1>Katherine Beckley</h1>
+<h2>About mee</h2>
 <p>coding is pretty neat</p>
-  <p> i keep on forgetting the syntax </p>
+  
 </body>
 </html>
