--- a/aboutme.html
+++ b/aboutme.html
@@ -7,8 +7,10 @@
 <body>
 
 <h1>Katherine Beckley</h1>
-<h2>About mee</h2>
-<p>coding is pretty neat</p>
+  
+<h2>About me</h2>
+<p>I like cats, cartoons, and playing the viola</p>
+  <p> I don't like chemistry, running, or tight clothes</p>
   
 </body>
 </html>
