--- a/aboutme.html
+++ b/aboutme.html
@@ -9,8 +9,11 @@
 <h1>Katherine Beckley</h1>
   
 <h2>About me</h2>
-<p>I like cats, cartoons, and playing the viola</p>
+<p>Hello! My name is Katherine. I like cats, cartoons, and playing the viola</p>
   <p> I don't like chemistry, running, or tight clothes</p>
+  <h3>Links:</h3>
+  <a href="url">https://scratch.mit.edu/projects/167015952/</a>
+  
   
 </body>
 </html>
