--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
 <p>Hello! My name is Katherine. I like cats, cartoons, and playing the viola</p>
   <p> I don't like chemistry, running, or tight clothes</p>
   <h3>Links:</h3>
-  <a href="url">https://scratch.mit.edu/projects/167015952/</a>
+  <a href="url">https://scratch.mit.edu/projects/167015952/>link</a>
   
   
 </body>
