--- a/aboutme.html
+++ b/aboutme.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 
-<h1>Katherine Beckley</h1>
+<h1 align="center">Katherine Beckley</h1>
   
 <h2>About me</h2>
+  <img 
 <p>Hello! My name is Katherine. I like cats, cartoons, and playing the viola</p>
   <p> I don't like chemistry, running, or tight clothes</p>
   <h3>Links:</h3>
