--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1 align="center">Katherine Beckley</h1>
+<h1 style="background-color:orange" align="center">Katherine Beckley</h1>
   
 <h2 align="center">About me</h2>
   <img align="center" src="katherine.jpg.png" alt="This is katherine picture" height="150" width="180">
