--- a/aboutme.html
+++ b/aboutme.html
@@ -4,9 +4,9 @@
 <head>
 <title>About Katherine</title>
 </head>
-<body>
+<body style="background-color:#EBDEF0">
 
-<h1 style="background-color:orange" align="center">Katherine Beckley</h1>
+<h1 align="center">Katherine Beckley</h1>
   
 <h2 align="center">About me</h2>
   <img align="center" src="katherine.jpg.png" alt="This is katherine picture" height="150" width="180">
