--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 <h1 align="center">Katherine Beckley</h1>
   
 <h2 align="center">About me</h2>
-  <img align="middle" src="katherine.jpg.png" alt="This is katherine picture" height="150" width="180">
+  <center>< img src="katherine.jpg.png" alt="This is katherine picture" height="150" width="180"></center>
 <p align= "center">Hello! My name is Katherine. I like cats, cartoons, and playing the viola</p>
   <p align="center"> I don't like chemistry, running, or tight clothes</p>
   <h3>Links:</h3>
