--- a/Core4Template.html
+++ b/Core4Template.html
@@ -48,9 +48,9 @@
         <tr>
         <td><b>Variables</b></td>
           <td>Something that stores a value</td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td>A box is like a variable because it stores things</td>
+          <td>option1= yes </td>
+          <td>set score to 1 </td>
         </tr>
 
         <!-- Fill in the row for Loops -->
