--- a/Core4Template.html
+++ b/Core4Template.html
@@ -56,16 +56,16 @@
         <!-- Fill in the row for Loops -->
         <tr>
           <td><b>Loops</b></td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td>Repeat(s) of something  </td>
+          <td>A bicycle wheel that turns around over and over</td>
+          <td>while gameOn </td>
+          <td>repeat, repeat until, forever blocks  </td>
         </tr>
 
         <!-- Fill in the row for Conditionals -->
         <tr>
           <td><b>Conditionals</b></td>
-          <td>  </td>
+          <td>An action that is performed when certain conditions are met </td>
           <td>  </td>
           <td>  </td>
           <td>  </td>
