--- a/Core4Template.html
+++ b/Core4Template.html
@@ -66,9 +66,10 @@
         <tr>
           <td><b>Conditionals</b></td>
           <td>An action that is performed when certain conditions are met </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td>If it is cold, I will wear a sweater </td>
+          <td>If option1==1 
+          print ("Hello!")</td>
+          <td>if __ then c-block </td>
         </tr>
 
         <!-- Fill in the row for Functions -->
