--- a/Core4Template.html
+++ b/Core4Template.html
@@ -75,10 +75,10 @@
         <!-- Fill in the row for Functions -->
         <tr>
           <td><b>Functions</b></td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
-          <td>  </td>
+          <td>A set action that is already known </td>
+          <td>Breathing, walking </td>
+          <td>print ("__")</td>
+          <td>move 10 steps block </td>
         </tr>
 
       </table>
