--- a/aboutme.html
+++ b/aboutme.html
@@ -17,6 +17,8 @@
   
   <a href="url">https://scratch.mit.edu/projects/166865452/>link</a>
   
+  <img src="circuits.jpg" height="150" width="180">
+  
   
 </body>
 </html>
