--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
   
   <a href="url">https://scratch.mit.edu/projects/166865452/>link</a>
   
-  <img src="circuits.jpg" height="150" width="190">
+  <img src="circuits.jpg.png" height="150" width="190">
   
   
 </body>
