--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 <h1 align="center">Katherine Beckley</h1>
   
 <h2 >About me</h2>
-  <img src="katherine.jpg.png" alt="This is katherine picture" height="150" width="180">
+  <img src="katherine.jpg" alt="This is katherine picture" height="150" width="180">
 <p>Hello! My name is Katherine. I like cats, cartoons, and playing the viola</p>
   <p > I don't like chemistry, running, or tight clothes</p>
   <h3>Links:</h3>
@@ -18,7 +18,7 @@
   <a href="url">https://scratch.mit.edu/projects/166865452/>link</a>
   
  <h4> Circuits</h4>
-  <img src="circuits.jpg.png" height="150" width="190">
+  <img src="circuits.jpg" height="150" width="190">
   
   
 </body>
