--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
   <a href="url">https://scratch.mit.edu/projects/166865452/>link</a>
   
  <h4> Circuits</h4>
-  <img src="circuits.jpg" height="150" width="190">
+  <img src="circuits.jpg.jpg" height="150" width="190">
   
   
 </body>
