--- a/circuitscav2.html
+++ b/circuitscav2.html
@@ -45,7 +45,7 @@
         <!-- Fill in the row for Variables -->
         <tr>
         <td><b>3-pin header</b></td>
-          <td>  </td>
+          <td>An electrical conductor </td>
           <td>  </td>
         </tr>
 
@@ -59,8 +59,8 @@
         <!-- Fill in the row for Variables -->
         <tr>
         <td><b>Phototransistor</b></td>
-          <td>  </td>
-          <td>  </td>
+          <td> convert light energy into electric energy</td>
+          <td> is encased in obaque and has an exposed base that amplifies light that passes through it and causes a high current to pass through it </td>
         </tr>
 
         <!-- Fill in the row for Variables -->
