--- a/circuitscav2.html
+++ b/circuitscav2.html
@@ -66,15 +66,15 @@
         <!-- Fill in the row for Variables -->
         <tr>
         <td><b>Infrared detector</b></td>
-          <td>  </td>
-          <td>  </td>
+          <td>a detector that reacts to infrared radiation  </td>
+          <td> they work by detecting the energy given off by other objects </td>
         </tr>
 
         <!-- Fill in the row for Variables -->
         <tr>
         <td><b>Push-button (extra)</b></td>
-          <td>  </td>
-          <td>  </td>
+          <td>component that connects two points in a circuit when you pass through it </td>
+          <td>completes a circuit by being pushed</td>
         </tr>
 
         <!-- Fill in the row for Variables -->
