--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,10 @@
 <head>
 <title>About Katherine</title>
 </head>
+  
+  window.addEventListener('load', function load(event) {
+	alert('Welcome to my profile, I hope you\'ll enjoy it!');
+},false);
 <body style="background-color:#EBDEF0">
 
 <h1 align="center">Katherine Beckley</h1>
