--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,8 @@
 	
 <body style="background-color:#EBDEF0">
 
+<center>
+
 <h1 align="center">Katherine Beckley</h1>
   
 <h2 >About me</h2>
@@ -23,6 +25,6 @@
  <h4> Circuits</h4>
   <img src="circuits.jpg.jpg" height="150" width="190">
   
-  
+</center>  
 </body>
 </html>
