--- a/oceans.html
+++ b/oceans.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>Meet the Creators</h1>
-<p> </p>
+<img src="seaturtle.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
   
 </center>
 </body>
